--- a/vignettes/articles/Regression-Test-oldrpf.Rmd
+++ b/vignettes/articles/Regression-Test-oldrpf.Rmd
@@ -40,21 +40,21 @@ regression_comparer <- function(y, x, ntrees, max_interaction, splits, split_try
     splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon
   )
   pred_cpp <- predict(rpf_cpp, x)
-  
   misclass_C_reg <- mean((lp[, 1] - pred_cpp$.pred)^2)
   diff_reg <- mean((pred_r - pred_cpp$.pred)^2)
-  pred_regr <- data.table(Task = "regr", R = pred_r, Cpp = pred_cpp$.pred)
-  
-  data.table(
-    method = "regr", loss = "L2",
-    misclass_R = misclass_R_reg, misclass_cpp = misclass_C_reg,
-    diff = diff_reg, preds = list(pred_regr)
+
+  list(
+    misclass = data.table(
+              method = "regr", loss = "L2",
+              R = misclass_R_reg, Cpp = misclass_C_reg,
+              diff = diff_reg
+            ),
+    preds = data.table(method = "regr", loss = "L2", R = pred_r, Cpp = pred_cpp$.pred)
   )
+
 }
 
 classif_comparer <- function(y, x, ntrees, max_interaction, splits, split_try, t_try, loss, delta, epsilon, lop = lop) {
-  # R version
-  #browser()
   y_cpp <- factor(y)
   y_oldrpf <- y
   if (loss == "exponential") {
@@ -71,7 +71,6 @@ classif_comparer <- function(y, x, ntrees, max_interaction, splits, split_try, t
   }
   pred_r <- pmin(1, pred_r)
   pred_r <- pmax(0, pred_r)
-
   misclass_R <- mean((lop - pred_r)^2)
 
   # C++ version
@@ -80,20 +79,18 @@ classif_comparer <- function(y, x, ntrees, max_interaction, splits, split_try, t
     splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon
   )
   pred_cpp <- predict(rpf_cpp, x, type = "prob")
-
   misclass_C <- mean((lop - pred_cpp$.pred_1)^2)
-
   diff <- mean((pred_r - pred_cpp$.pred_1)^2)
 
-  pred <- data.table(Task = "classif", R = pred_r, Cpp = pred_cpp$.pred_1)
-
-  data.table(
-    method = "classif", loss = loss,
-    misclass_R = misclass_R, misclass_cpp = misclass_C,
-    diff = diff, preds = list(pred)
+  list(
+    misclass =  data.table(
+                  method = "classif", loss = loss,
+                  R = misclass_R, Cpp = misclass_C,
+                  diff = diff
+                ),
+    preds = data.table(method = "classif", loss = loss, R = pred_r, Cpp = pred_cpp$.pred_1)
   )
 }
-
 ```
 
 This article serves as a regression test to check the behavior of the current (C++) implementation against the previous
@@ -118,7 +115,6 @@ max_interaction <- 4
 splits <- 10
 split_try <- 10
 t_try <- 0.4
-loss <- "L2"
 delta <- 0.1
 epsilon <- 0.1
 ```
@@ -126,17 +122,15 @@ epsilon <- 0.1
 
 ## Regression
 
+Only supports `loss = "L2"` and parameters `epsilon` and `delta` are not applicable, at least in Cpp version.
+
 ```{r regression}
 cmp_regr <- regression_comparer(
   y = y, x = x, ntrees = ntrees, max_interaction = max_interaction,
-  splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon, lp = lp
+  splits = splits, split_try = split_try, t_try = t_try, loss = "L2", delta = delta, epsilon = epsilon, lp = lp
 )
-```
 
-### Comparison
-
-```{r regression-plot}
-cmp_regr[["preds"]][[1]] |>
+cmp_regr[["preds"]] |>
   ggplot(aes(x = R, y = Cpp)) +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
@@ -158,9 +152,10 @@ bench::mark(
       splits = splits, split_try = split_try, t_try = t_try, loss = loss
     )
   },
-  iterations = 5,
+  min_iterations = 2,
+  max_iterations = 5,
   check = FALSE
-) |> plot(type = "boxplot")
+) |> plot()
 ```
 
 
@@ -168,22 +163,18 @@ bench::mark(
 
 ```{r classif}
 y <- rbinom(n, 1, plogis(lp[, 1]))
-yfac <- factor(y)
-
 lop <- (sign(lp[, 1]) + 1) / 2
 ```
 
 ### L1 Loss
 
 ```{r classif-L1}
-loss <- "L1" # "logit" # "L1" # "L2" # "exponential"
-
 cmp_classif_l1 <- classif_comparer(
   y = y, x = x, ntrees = ntrees, max_interaction = max_interaction,
-  splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon, lop = lop
+  splits = splits, split_try = split_try, t_try = t_try, loss = "L1", delta = delta, epsilon = epsilon, lop = lop
 )
 
-cmp_classif_l1[["preds"]][[1]] |>
+cmp_classif_l1[["preds"]] |>
   ggplot(aes(x = R, y = Cpp)) +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
@@ -193,14 +184,12 @@ cmp_classif_l1[["preds"]][[1]] |>
 ### L2 Loss
 
 ```{r classif-L2}
-loss <- "L2" # "logit" # "L1" # "L2" # "exponential"
-
 cmp_classif_l2 <- classif_comparer(
   y = y, x = x, ntrees = ntrees, max_interaction = max_interaction,
-  splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon, lop = lop
+  splits = splits, split_try = split_try, t_try = t_try, loss = "L2", delta = delta, epsilon = epsilon, lop = lop
 )
 
-cmp_classif_l2[["preds"]][[1]] |>
+cmp_classif_l2[["preds"]] |>
   ggplot(aes(x = R, y = Cpp)) +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
@@ -209,14 +198,12 @@ cmp_classif_l2[["preds"]][[1]] |>
 ### Logit Loss
 
 ```{r classif-logit}
-loss <- "logit" # "logit" # "L1" # "L2" # "exponential"
-
 cmp_classif_logit <- classif_comparer(
   y = y, x = x, ntrees = ntrees, max_interaction = max_interaction,
-  splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon, lop = lop
+  splits = splits, split_try = split_try, t_try = t_try, loss = "logit", delta = delta, epsilon = epsilon, lop = lop
 )
 
-cmp_classif_logit[["preds"]][[1]] |>
+cmp_classif_logit[["preds"]] |>
   ggplot(aes(x = R, y = Cpp)) +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
@@ -226,14 +213,13 @@ cmp_classif_logit[["preds"]][[1]] |>
 ### Exponential Loss
 
 ```{r classif-exponential}
-loss <- "exponential" # "logit" # "L1" # "L2" # "exponential"
-
 cmp_classif_exp <- classif_comparer(
   y = y, x = x, ntrees = ntrees, max_interaction = max_interaction,
-  splits = splits, split_try = split_try, t_try = t_try, loss = loss, delta = delta, epsilon = epsilon, lop = lop
+  splits = splits, split_try = split_try, t_try = t_try, loss = "exponential", 
+  delta = delta, epsilon = epsilon, lop = lop
 )
 
-cmp_classif_exp[["preds"]][[1]] |>
+cmp_classif_exp[["preds"]] |>
   ggplot(aes(x = R, y = Cpp)) +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
@@ -241,25 +227,33 @@ cmp_classif_exp[["preds"]][[1]] |>
 
 ## Summary Comparison
 
-```{r classif-plot, fig.dim=c(9, 7)}
-cmp_nested <- rbindlist(list(cmp_regr, cmp_classif_l1, cmp_classif_l2, cmp_classif_logit, cmp_classif_exp))
+```{r comp-misclassif-table, fig.dim=c(9, 7)}
+cmp_misclass <- rbindlist(list(
+  cmp_regr[["misclass"]], cmp_classif_l1[["misclass"]], cmp_classif_l2[["misclass"]], 
+  cmp_classif_logit[["misclass"]], cmp_classif_exp[["misclass"]]
+))
 
-cmp_nested[, c("method", "loss", "misclass_R", "misclass_cpp", "diff")] |>
-  knitr::kable(digits = 5)
+knitr::kable(cmp_misclass, digits = 5)
+```
 
-cmp_long <- cmp_nested |>
-  tidyr::unnest(preds) |>
-  as.data.table()
 
-ggplot(cmp_long, aes(x = R, y = Cpp)) +
-  facet_wrap(~Task + loss, scales = "free") +
+```{r comp-preds-plot, fig.dim=c(9, 7)}
+cmp_preds <- rbindlist(list(
+  cmp_regr[["preds"]], cmp_classif_l1[["preds"]], cmp_classif_l2[["preds"]], 
+  cmp_classif_logit[["preds"]], cmp_classif_exp[["preds"]]
+))
+
+ggplot(cmp_preds, aes(x = R, y = Cpp)) +
+  facet_wrap(~method + loss, scales = "free") +
   geom_point(size = 2, alpha = 2/3) +
   geom_abline(color = "red")
+```
 
-# Plot distributions
-melt(cmp_long, measure.vars = c("R", "Cpp"), value.name = "Pred", variable.name = "Version") |>
+
+```{r comp-preds-plot-ecdf, fig.dim=c(9, 7)}
+melt(cmp_preds, measure.vars = c("R", "Cpp"), value.name = "Pred", variable.name = "Version") |>
   ggplot(aes(x = Pred, col = Version)) +
-    facet_wrap(~Task + loss, scales = "free") +
+    facet_wrap(~method + loss, scales = "free") +
     stat_ecdf() +
     scale_color_brewer(palette = "Dark2")
 ```
